refactor: use TransportProtocol enum in examples AgentCardProducer
Replace the raw string switch statement with an exhaustive switch expression based on the TransportProtocol enum. Using fromString() provides fail-fast validation on invalid config values, and removing the default clause enforces compile-time updates when new protocols are added to the enum.